# adventofcode

./: .gitignore  .travis.yml  Cargo.toml  Makefile  flake.nix
.github/workflows/: rust.yaml
2017/01/src/: main.rs
2017/02/: Cargo.toml
2017/02/src/: main.rs
2017/03/src/: main.rs  point.rs  sum_spiral.rs
2017/04/src/: main.rs
2017/05/: Cargo.toml
2017/05/src/: main.rs
2017/06/: Cargo.toml
2017/06/src/: bank.rs  main.rs
2017/07/: Cargo.toml
2017/07/src/: main.rs  tower.rs
2017/08/src/: main.rs
2017/09/: Cargo.toml
2017/09/src/: main.rs
2017/10/: Cargo.toml
2017/10/src/: main.rs  stringcircle.rs
2017/11/src/: main.rs
2017/12/: Cargo.toml
2017/12/src/: main.rs
2017/15/: Cargo.toml
2017/15/src/: main.rs
2017/16/: Cargo.toml
2017/16/src/: bin.rs  lib.rs  moves.rs
2017/17/src/: lib.rs
2017/18/: Cargo.toml
2017/18/src/: bin.rs  instr.rs  lib.rs  memory.rs  processor.rs  program.rs
2017/19/: Cargo.toml
2017/19/src/: bin.rs  lib.rs
2017/20/src/: bin.rs  lib.rs
2017/22/: Cargo.toml  log
2017/22/src/: bin.rs  lib.rs
2019/: Cargo.toml
2019/benches/: intcode.rs
2019/src/: arkanoid.rs  day02.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day22.rs  day23.rs  day24.rs  geo.rs  grid.rs  intcode.rs  lib.rs  point.rs
2020/: Cargo.toml  a
2020/example/: day19-01-03.txt  day19-01-05.txt  day19-02-05.txt
2021/: Cargo.toml
2022/: Cargo.toml
aocutil/: Cargo.toml
aocutil/src/: direction.rs  grid.rs  iter.rs  lib.rs  point.rs  test.rs
example/2020/: day19-01-04.txt  day19-01-06.txt  day19-02-04.txt
rust/2015/: Cargo.toml
rust/2017/01/: Cargo.toml
rust/2017/03/: Cargo.toml
rust/2017/04/: Cargo.toml
rust/2017/10/: Cargo.toml
rust/2017/11/: Cargo.toml
rust/2017/17/: Cargo.toml
rust/2017/19/: Cargo.toml
rust/2019/: input
rust/2020/: Cargo.toml
rust/2021/: Cargo.toml
rust/2022/: Cargo.toml
rust/2023/: Cargo.toml
(+32 files in other folders)
