[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Sebastian Nowicki <sebnow@gmail.com>"]
edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "^0.2.2"
aoc-runner-derive = "^0.2.2"
anyhow = "^1.0.25"
itertools = "^0.8.2"
permutohedron = "^0.2.4"
regex = "^1.3.1"
aocutil = {path = "../aocutil"}
termion = "^1.5.0"
euclid = "^0.22.1"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "intcode"
harness = false
