[package]
name = "adventofcode2015"
version = "0.1.0"
authors = ["Sebastian Nowicki <sebnow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ""
aocutil = {path = "../aocutil"}
itertools = "0.9.0"
