[package]
name = "adventofcode2015"
version = "0.1.0"
authors = ["Sebastian Nowicki <sebnow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ""
aocutil = {path = "../aocutil"}
itertools = "0.9.0"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "9239621ffc9c653b27ce857448d82bbf770f8933" # newer than 0.3
