[package]
name = "adventofcode2021"
version = "0.1.0"
authors = ["Sebastian Nowicki <sebnow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aocutil = {path = "../aocutil"}
euclid = "^0.22.1"
itertools = "0.9.0"
