[package]
name = "adventofcode2022"
version = "0.1.0"
authors = ["Sebastian Nowicki <sebnow@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aocutil = {path = "../aocutil"}
itertools = "0.10.5"
